src/main/java/semantic/abstractSintaxTree/test/failing/selfAccessInStaticMethod.ru
/? SelfAccessInStaticMethod
struct A {
    Int x;
}

impl A {
    .() {
    }
    st fn function() -> void {self.x = 5;}
}

start {
}